--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,7 +2,7 @@
   position: relative;
   min-width: 100dvw;
   height: 100dvh;
-  z-index: 1;
+  z-index: 10;
 }
 
 @media (min-width: 768px) {
